--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Breno's Profile Page</title>
+    <title>Fernando's Profile Page</title>
   </head>
   <body>
-    <div class="card">
+    <div class="card glow">
       <section class="profile">
         <div class="profile__informations">
           <div class="profile__picture"></div>
-          <h3 class="profile__name">Breno Almeida</h3>
-          <p class="profile__job">Programador/Musico</p>
+          <h3 class="profile__name">Fernando Quiroz</h3>
+          <p class="profile__job">FullStack Developer</p>
           <ul class="profile__links">
             <li>
               <a href="https://instagram.com/brenimsilva" class="icons"
@@ -28,10 +28,10 @@
               ></a>
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/breno-almeida-273533238/" class="icons"><i class="fa-brands fa-linkedin"></i></a>
+              <a href="www.linkedin.com/in/fernando-quiroz-0541a529/" class="icons"><i class="fa-brands fa-linkedin"></i></a>
             </li>
             <li>
-              <a href="https://github.com/brenimsilva" class="icons"><i class="fa-brands fa-github"></i></a>
+              <a href="https://github.com/fquiroz" class="icons"><i class="fa-brands fa-github"></i></a>
             </li>
           </ul>
         </div>
@@ -48,7 +48,7 @@
         <div class="html">
           <h5 class="skills__html">HTML</h5>
           <i class="fa-brands fa-html5"></i>
-          <p class="">Intermediate</p>
+          <p class="">Advanced</p>
         </div>
         <div class="css">
           <h5 class="skills__css">CSS</h5>
@@ -58,7 +58,12 @@
         <div class="js">
           <h5 class="skills__js">JS</h5>
           <i class="fa-brands fa-js"></i>
-          <p class="">Intermediate</p>
+          <p class="">Advanced</p>
+        </div>
+         <div class="react">
+          <h5 class="skills__angular">Angular</h5>
+          <i class="fa-brands fa-angular"></i>
+          <p class="">Advanced</p>
         </div>
         <div class="react">
           <h5 class="skills__react">React JS</h5>
@@ -68,12 +73,12 @@
         <div class="node">
           <h5 class="skills__node">Node JS</h5>
           <i class="fa-brands fa-node-js"></i>
-          <p class="">Beginner</p>
+          <p class="">Advanced</p>
         </div>
         <div class="firebase">
           <h5 class="skills__firebase">Firebase</h5>
           <i class="fa-solid fa-database"></i>
-          <p class="">Beginner</p>
+          <p class="">Advanced</p>
         </div>
       </section>
       <section class="projects fadeOut">
@@ -109,7 +114,7 @@
       </section>
     </div>
     <footer>
-      <p class="copy">Copyright ©2022 Breno Almeida. All Rights Reserved</p>
+      <p class="copy"> ©2022 Fernando Quiroz</p>
     </footer>
     <script src="script.js"></script>
   </body>
