--- a/index.html
+++ b/index.html
@@ -46,37 +46,43 @@
       </div>
       <section class="skills fadeIn">
         <div class="html">
-          <h5 class="skills__html">HTML</h5>
+          <h4 class="skills__html">HTML</h4>
           <i class="fa-brands fa-html5"></i>
           <p class="">Advanced</p>
         </div>
         <div class="css">
-          <h5 class="skills__css">CSS</h5>
+          <h4 class="skills__css">CSS</h5>
           <i class="fa-brands fa-css3-alt"></i>
           <p class="">Intermediate</p>
         </div>
         <div class="js">
-          <h5 class="skills__js">JS</h5>
+          <h4 class="skills__js">JS</h4>
           <i class="fa-brands fa-js"></i>
           <p class="">Advanced</p>
         </div>
          <div class="react">
-          <h5 class="skills__angular">Angular</h5>
+          <h4 class="skills__angular">Angular</h4>
           <i class="fa-brands fa-angular"></i>
           <p class="">Advanced</p>
         </div>
         <div class="react">
-          <h5 class="skills__react">React JS</h5>
+          <h4 class="skills__react">React JS</h4>
           <i class="fa-brands fa-react"></i>
           <p class="">Beginner</p>
         </div>
         <div class="node">
-          <h5 class="skills__node">Node JS</h5>
+          <h4 class="skills__node">Node JS</h4>
           <i class="fa-brands fa-node-js"></i>
           <p class="">Advanced</p>
         </div>
         <div class="firebase">
-          <h5 class="skills__firebase">Firebase</h5>
+          <h4 class="skills__firebase">Firebase</h4>
+          <i class="fa-solid fa-database"></i>
+          <p class="">Advanced</p>
+        </div>
+
+      <div class="mongo">
+          <h4 class="skills__mongo">Mongo DB</h4>
           <i class="fa-solid fa-database"></i>
           <p class="">Advanced</p>
         </div>
