efecto borde skills

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <section class="profile">
         <div class="profile__informations">
           <div class="profile__picture"></div>
-          <h3 class="profile__name">Fernando Quiroz</h3>
+          <h3 class="profile__name">FERNANDO QUIROZ</h3>
           <p class="profile__job">FullStack Developer</p>
           <ul class="profile__links">
             <li>
@@ -45,16 +45,7 @@
         </label>
       </div>
       <section class="skills fadeIn">
-        <div class="html">
-          <h4 class="skills__html">HTML</h4>
-          <i class="fa-brands fa-html5"></i>
-          <p class="">Advanced</p>
-        </div>
-        <div class="css">
-          <h4 class="skills__css">CSS</h5>
-          <i class="fa-brands fa-css3-alt"></i>
-          <p class="">Intermediate</p>
-        </div>
+     
         <div class="js">
           <h4 class="skills__js">JS</h4>
           <i class="fa-brands fa-js"></i>
@@ -75,6 +66,23 @@
           <i class="fa-brands fa-node-js"></i>
           <p class="">Advanced</p>
         </div>
+
+        <div class="node">
+          <h4 class="skills__node">NestJS</h4>
+          <i class="fa-brands fa-js"></i>
+          <p class="">Advanced</p>
+        </div>
+
+       <div class="html">
+          <h4 class="skills__html">HTML</h4>
+          <i class="fa-brands fa-html5"></i>
+          <p class="">Advanced</p>
+        </div>
+        <div class="css">
+          <h4 class="skills__css">CSS</h5>
+          <i class="fa-brands fa-css3-alt"></i>
+          <p class="">Intermediate</p>
+        </div>
         <div class="firebase">
           <h4 class="skills__firebase">Firebase</h4>
           <i class="fa-solid fa-database"></i>
@@ -82,10 +90,30 @@
         </div>
 
       <div class="mongo">
-          <h4 class="skills__mongo">Mongo DB</h4>
+          <h4 class="skills__mongo">Mongo</h4>
           <i class="fa-solid fa-database"></i>
           <p class="">Advanced</p>
-        </div>
+      </div>
+      
+      <div class="java">
+          <h4 class="skills__java">Java</h4>
+            <i class="fa-brands fa-java"></i>
+          <p class="">Advanced</p>
+      </div>
+
+      <div class="net">
+          <h4 class="skills__net">Net</h4>
+          <i class="fa-brands fa-microsoft"></i>
+          <p class="">Advanced</p>
+      </div> 
+
+      <div class="net">
+        <h4 class="skills__net">Cloud Ws</h4>
+        <i class="fa-brands fa-aws"></i>
+        <p class="">Advanced</p>
+      </div> 
+
+
       </section>
       <section class="projects fadeOut">
         <div onclick="window.open('https://brenimsilva.github.io/calculator/')" class="project__calculator project">
