--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
           <h3 class="profile__name">FERNANDO QUIROZ</h3>
           <p class="profile__job">FullStack Developer</p>
           <ul class="profile__links">
-            <li>
-              <a href="https://instagram.com/brenimsilva" class="icons"
+   <!--          <li>
+              <a href="https://instagram.com/" class="icons"
                 ><i class="fa-brands fa-instagram"></i
               ></a>
-            </li>
+            </li> -->
             <li>
               <a href="www.linkedin.com/in/fernando-quiroz-0541a529/" class="icons"><i class="fa-brands fa-linkedin"></i></a>
             </li>
