--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 
       </section>
-      <section class="projects fadeOut">
+<!--       <section class="projects fadeOut">
         <div onclick="window.open('https://brenimsilva.github.io/calculator/')" class="project__calculator project">
           <h5 class="project__title">Calculator</h5>
           <ul class="project__techs">
@@ -145,7 +145,7 @@
             <li><p class="project__tech2">CSS</p></li>
             <li><p class="project__tech3">JS</p></li>
         </div>
-      </section>
+      </section> -->
     </div>
     <footer>
       <p class="copy"> ©2022 Fernando Quiroz</p>
